simpsons-quotes/manifests/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpson-quotes-api-deployment
  labels:
    app: simpson-quotes-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simpson-quotes-api
  template:
    metadata:
      labels:
        app: simpson-quotes-api
    spec:
      containers:
        - name: simpson-quotes-api
          image: jothanpe/simpson-quotes-api:v1.0.0
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: dockerreg
---
apiVersion: v1
kind: Service
metadata:
  name: simpson-quotes-api-service
spec:
  type: NodePort
  selector:
    app: simpson-quotes-api
  ports:
    - name: simpson-quotes-api-port
      protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30000
