simpsons-quotes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simpsons-quotes-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: "kubernetes.docker.internal"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simpson-quotes-api-service
                port:
                  number: 8000
